# deep-learning-docker

./: .gitignore  README.md  install_docker_ce_ubuntu_amd64.sh  install_nvidia_docker_ubuntu_amd64.sh  install_nvidia_driver.sh
example/gesture_recognition/: gesture_rgb_demo_keras.py  gesture_rgb_demo_tf.py  train_gesture_recognition.ipynb
example/object_detection/keras_ssd/: README.md  keras_ssd300.py  keras_ssd300_mobilenet_v1.py  keras_ssd7.py  ssd300_evaluation_COCO_2017.ipynb  ssd300_evaluation_Pascal_VOC.ipynb  ssd300_training_coco_2017.ipynb  ssd300_training_pascal2012.ipynb  ssd7_training_udacity_driving.ipynb  ssd7_webcam.py  ssd_batch_generator.py  ssd_mobilenet_training_udacity_driving.ipynb  ssd_predict.py
example/object_detection/tf_ssd/: Makefile  README.md
example/people_detection/: Makefile
example/posture_recognition/: Makefile  annotation.py  demo.py  train_posture_recognition.ipynb
example/tool/: PlotModelFromPb.ipynb  rgb2gray.py
example/toy/: keras_to_tensorflow_mnist.ipynb
example/toy/pytorch/: gru.py  (+1 more)
example/toy/tensorflow/c++/: CMakeLists.txt  mnist.cpp
framework/caffe/: Dockerfile  Makefile
framework/caffe2/: Dockerfile  Makefile
framework/opencv_dlib/: Dockerfile  Makefile
framework/pytorch/: Dockerfile  Makefile
tool/: create_oid_tf_record.py  extract_coco_dataset.py  extract_oid_dataset.py  oid_tfrecord_creation.py  tf_graph_transforms.py  tf_objdet_api_webcam.py  tf_pb_to_lite.py  visualization_oid.py
util/: classification.py  detection.py  keras_to_tensorflow.py  misc.py
util/keras_util/: coco_obj_generator.py
(+43 files in other folders)
